--- a/lang.css
+++ b/lang.css
@@ -65,7 +65,7 @@ header {
 
 /* Kiosk Container */
 .kiosk {
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(202, 197, 197, 0.639);
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   width: 90%;
@@ -102,7 +102,7 @@ header {
   border-radius: 8px;
   text-align: center;
   font-size: 1.1em;
-  font-weight: 500;
+  font-weight: bold;
   color: #15181b;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
