--- a/otp.css
+++ b/otp.css
@@ -4,6 +4,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   align-items: center;
+  font-weight: 400;
   position: relative;
   margin: 0;
 }
