--- a/style2.css
+++ b/style2.css
@@ -93,7 +93,7 @@
  }
 
  nav h3 {
-   font-family: 'Poppins', sans-serif;
+   font-family: 'Open sans', sans-serif;
    letter-spacing: 0.1em;
    font-size: 1.5rem;
    margin: 0;
@@ -111,7 +111,7 @@
  }
 
  .form-container h1 {
-   font-family: 'Poppins', sans-serif;
+   font-family: 'Open sans', sans-serif;
    color: black;
    margin-bottom: 20px;
  }
